--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasanga.html">Lasanga</a></li>
+        <li><a href="recipes/herb-chicken.html">Herb Chicken</a></li>
+        <li><a href="recipes/Pink sauce pasta.html">Pink Sauce Pasta</a></li>
+    </ul>
         <a href="recipes/lasanga.html">Lasanga</a>
 </body>
 </html>
