--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -24,8 +24,14 @@
     <br>
     <h3>Steps to cook:</h3>
     <ol>
-        <li>Spoon meat sauce on the bottom of a lightly greased casserole dish. Add 4 boiled lasagna noodles (or use no-boil or fresh noodles). Spread 1/3 of the ricotta cheese mixture on top. Add 1.5 cups of meat sauce.</li>
-        <li>Top with mozzarella cheese. Cover and bake at 375° for 30 minutes. Remove cover and bake for 15 more minutes. Broil at the end if desired. Let it rest for 15 minutes prior to serving with Garlic Bread With Cheese.</li>
+        <li>Spoon meat sauce on the bottom of a lightly greased casserole dish.</li>
+        <li>Add 4 boiled lasagna noodles (or use no-boil or fresh noodles).</li>
+        <li>Spread 1/3 of the ricotta cheese mixture on top.</li>
+        <li>Add 1.5 cups of meat sauce.</li>
+        <li>Top with mozzarella cheese. Cover and bake at 375° for 30 minutes.</li>
+        <li> Remove cover and bake for 15 more minutes.</li>
+        <li>Broil at the end if desired.</li>
+        <li>Let it rest for 15 minutes prior to serving with Garlic Bread With Cheese.</li>
     </ol>
 </body>
 </html>
